# flask-google-login

./: .gitignore  README.md  app.py  db.py  pyproject.toml  user.py
src/flask_google_login/: __init__.py
